# VectorSearch-RNNDescent

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
benches/: README.md  download_dataset.sh
benchmark/: BenchmarkCLI.h  BenchmarkDataIO.h  BenchmarkEvaluation.h  BenchmarkReport.h  BenchmarkRunner.h  BenchmarkTypes.h
solution/: solution.cpp  solution.h
solution/rnndescent/: Assertions.h  IndexRNNDescent.h  Logger.h  RNNDescent.h  RNNDescentInitial.h  Views.h
solution/rnndescent/discomputer/: Avx2SimdDistanceComputerFP32.h  Avx2SimdDistanceComputerInt8.h  Avx512SimdDistanceComputerFP32.h  Avx512SimdDistanceComputerUInt8.h  CblasDistComputerFP32.h  MyDistanceComputer.h  NeighborsStorageBase.h  NeonSimdDistanceComputerFP16.h  NeonSimdDistanceComputerFP32.h  NeonSimdDistanceComputerInt16.h  NeonSimdDistanceComputerInt8.h  PlatformSimdDistanceComputer.h  utils.h
